13-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mynamespace
  labels:
    project: swiggy
    env: dev
