01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: name
spec:
  containers:
    - name: c1
      image: nginx
      ports:
        - containerPort: 80
