02-pod-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    env: dev
    author: upendra
spec:
  containers:
    - name: c1
      image: nginx
      ports:
        - containerPort: 80


#kubectl create -f mypod.yaml
#kubectl get po --show-labels  --------------------------------------------- it list the pods with labels
#kubectl label pod mypod env=test client=swiggy ---------------------------- Assign the labels to existing pod
#kubectl label pod mypod env=test client=swiggy --overwrite    -------------- if same label is there it will override
#kubectl get po -l env=dev  ------------------------------------------------  list the pod, which pod have env=dev label
#kubectl get po -l env=dev,client=flm ---------------------------------------- list the pods with multiple labels
#kubectl label pod <pod-name> env- project- clent-  -------------------------- delete the assigned labels
