03-pod-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  nodeSelector:
     node: worker2
  containers:
    - name: c1
      image: nginx
      ports:
        - containerPort: 80



# it helps to where pod should be sheduled/placed in node1/node2.
