23-rq-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mypod
  namespace: upendra
spec: 
  containers:
    - name: cc1
      image: nginx
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: "100m"
          memory: "5Mi"
        limits:
          cpu: "200m"
          memory: "10Mi"
