26-pod-AtiAffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: swiggy
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - swiggy
          topologyKey: kubernetes.io/hostname
  containers:
    - name: c1
      image: httpd
      ports:
        - containerPort: 80
