27-pod-nodeAffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: swiggy
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: instance
                operator: In
                values:
                  - logs
  containers:
    - name: c1
      image: httpd
      ports:
        - containerPort: 80


#requiredDuringSchedulingIgnoredDuringExecution ------------- if nodelabel match its schedule the pod otherwise pode will went pending.
#requiredDuringSchedulingIgnoredDuringExecution --------------It will gave a first preference to schedule the pod match node-label, 
                                                              if node label is not availble schedule a pod anothe node.
