daemonse.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: myswiggy-daemonset
spec:
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: c1
          image: nginx
          ports:
            - containerPort: 80
