pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:                             
    app: devpod
spec:
  containers:
    - name: c1
      image: nginx
      ports:
        - containerPort: 80
