statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myswiggy-statefulset
spec:
  serviceName: "myservice"      # required: headless Service name
  replicas: 3
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: c1
          image: nginx
          ports:
            - containerPort: 80
