04-service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: ClusterIP
  selector:
     app: swiggy
  ports:
    - port: 80
      targetPort: 80


#kubectl create -f service-clusterIP.yaml
#kubectl get service



#acess the application/pod inside the cluster using clusterip.
