05-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: NodePort
  selector:
    app: swiggy
  ports:
    - port: 1111
      targetPort: 80
      nodePort: 30002


#Accessing a application/pod externally using virtualIP:nodeport.
