06-service-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: LoadBalancer
  selector:
    app: swiggy
  ports:
    - port: 1111
      targetPort: 80
      nodePort: 30002



# Access the application externally using dns:serviceport, its eqully distribute a incoming traffic all healthy pods.
