07-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-headless-service
spec:
  clusterIP: None
  selector:
    app: swiggy
  ports:
    - port: 80
      targetPort: 80
