32-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mydeployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-app
      env: green
  template:
    metadata:
      labels:
        app: demo-app
        env: green
    spec:
      containers:
        - image: httpd
          name: c1
          ports:
            - containerPort: 80


apiVersion: v1
kind: Service
metadata:
  name: demo-appservice
spec:
  selector:
    app: demo-app
    env: green
  ports:
    - port: 80
      targetPort: 80

  type: LoadBalancer


  #in realtime we maintain a two deployment environments but one service, when we update a newversion - in servce just change a labels.
