headlessservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  clusterIP: None          # <-- makes it headless
  selector:
    app: swiggy
  ports:
    - port: 80
      targetPort: 80
