29-ingress(hostname based).yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-hostbased
spec:
  ingressClassName: nginx
  rules:
    - host: shop-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shop
                port:
                  number: 80
    - host: tickets-booking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tickets
                port:
                  number: 80
